<resources>
    <string name="app_name">SRPlayer</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="video_app_header">播放内置视频</string>
    <string name="video_local_header">播放本地视频</string>
    <string name="config_header">播放设置</string>
    <string name="export_config">导出设置</string>

    <string name="video_title">选择视频</string>
    <string name="video_not_choose">未选择视频</string>
    <string name="video_choose">点击选择视频</string>
    <string name="video_choose_hint">请先选择视频</string>
    <string name="video_format_not_support">只支持.mp4、.webm、.3gp封装格式的视频</string>
    <string name="sr_ratio">放大倍数</string>
    <string name="video_choose_text">选择视频</string>
    <string name="video_op_type">视频操作模式</string>
    <string name="codec_type">编码器</string>
    <string name="bitrate_mbps">编码码率(Mb/s)，与保真度正相关</string>

    <string name="full_screen_config">是否全屏绘制</string>
    <string name="compare_algorithm">对比算法</string>
    <string name="compare_source">对比原视频</string>
    <string name="cycle_play">循环播放</string>

    <string name="video_algorithm">视频处理算法</string>

    <string name="play_sr_video">播放超分视频</string>
    <string name="export_sr_video">导出超分视频</string>
    <string name="export_video">导出视频</string>

    <string name="full_screen_on">将全屏绘制纹理</string>
    <string name="full_screen_off">将按照纹理的原大小绘制</string>
    <string name="compare_mode_on">绘制超分后的图像与对比的图像</string>
    <string name="compare_mode_off">只绘制超分后的图像</string>
    <string name="cycle_play_on">播放结束后从头开始循环播放</string>
    <string name="cycle_play_off">播放结束后停止</string>

    <string name="start_play_tsr">播放</string>
    <string name="start_export_tsr">导出</string>
    <string name="right_bilinear">Right: Bilinear</string>
    <string name="left_sr">Left: TSR</string>
    <string name="play_video">播放</string>
    <string name="pause_video">暂停</string>

    <string name="dump_start">开始Dump，请等待Dump完成…</string>
    <string name="dump_done">超分视频已保存在手机相册</string>
    <string name="slide_again">"再划动一次退出播放"</string>

    <string name="sr1.0x">1.0</string>
    <string name="sr1.2x">1.2</string>
    <string name="sr1.5x">1.5</string>
    <string name="sr1.7x">1.7</string>
    <string name="sr2.0x">2.0</string>

    <string name="local_video">本地视频</string>
    <string name="in_app_video">内置视频</string>

    <string name="girl_video">girl-544x960.mp4</string>

    <string name="brightness">明亮度:51</string>
    <string name="brightness_title">亮度调整，0–100，默认51</string>
    <string name="contrast">对比度:55</string>
    <string name="contrast_title">对比度调整，0–100，默认55</string>
    <string name="saturation">饱和度:52</string>
    <string name="saturation_title">饱和度调整，0–100，默认52</string>
    <string name="sharpness">锐化度:0</string>
    <string name="sharpness_title">锐化度调整，0–100，默认0</string>

    <string name="down">down</string>
    <string name="up">up</string>
</resources>