<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        app:key="@string/sr_ratio"
        app:title="@string/sr_ratio"
        app:entries="@array/sr_ratio"
        app:entryValues="@array/sr_ratio"
        app:defaultValue="2.0"
        app:useSimpleSummaryProvider="true" />

    <PreferenceCategory app:key="play_config" app:title="@string/config_header">

        <SwitchPreferenceCompat
                app:key="@string/full_screen_config"
                app:title="@string/full_screen_config"
                app:summaryOn="@string/full_screen_on"
                app:summaryOff="@string/full_screen_off"/>

        <SwitchPreferenceCompat
                app:key="@string/compare_lerp"
                app:title="@string/compare_lerp"
                app:summaryOn="@string/compare_lerp_on"
                app:summaryOff="@string/compare_lerp_off"
                app:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:key="export_config" app:title="@string/export_config">

        <ListPreference
            app:key="@string/codec_type"
            app:title="@string/codec_type"
            app:entries="@array/codecs"
            app:entryValues="@array/codecs"
            app:defaultValue="H264"
            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
            app:key="@string/bitrate_mbps"
            app:title="@string/bitrate_mbps"
            app:defaultValue="20"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

</PreferenceScreen>