<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

    <FrameLayout
            android:id="@+id/video_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:keepScreenOn="true" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

        <CheckBox
                android:id="@+id/color_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false" />

        <LinearLayout
                android:id="@+id/color_setting_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/text_background"
                android:orientation="horizontal"
                android:visibility="gone">

            <android.widget.Button
                    android:id="@+id/down_value_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/down"
                    android:textColor="@color/white"
                    android:layout_gravity="center_vertical"
                    android:background="@color/teal_700" />

            <RadioGroup
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <RadioButton
                        android:textColor="@color/white"
                        android:id="@+id/radio_btn_brightness"
                        android:text="@string/brightness"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                <RadioButton
                        android:textColor="@color/white"
                        android:checked="true"
                        android:id="@+id/radio_btn_contrast"
                        android:text="@string/contrast"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                <RadioButton
                        android:textColor="@color/white"
                        android:id="@+id/radio_btn_saturation"
                        android:text="@string/saturation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                <RadioButton
                        android:textColor="@color/white"
                        android:id="@+id/radio_btn_sharpness"
                        android:text="@string/sharpness"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
            </RadioGroup>

            <android.widget.Button
                    android:id="@+id/up_value_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/up"
                    android:textColor="@color/white"
                    android:layout_gravity="center_vertical"
                    android:background="@color/teal_700" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:background="#00000000">

        <TextView
                android:id="@+id/sr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp"
                android:text="@string/left_sr"
                android:textColor="#FF0000"
                android:textSize="15sp" />

        <Button
                android:id="@+id/playControlButton"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:backgroundTint="#00FF0000"
                android:text="@string/play_video"
                android:textColor="#FF0000" />

        <TextView
                android:id="@+id/cmp_algorithm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:text="@string/right_bilinear"
                android:textColor="#FF0000"
                android:textSize="15sp" />
    </RelativeLayout>

</FrameLayout>