<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#00000000"
                        android:layout_gravity="start"
                        android:gravity="center_vertical"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="70dp"
                        android:textSize="14sp"
                        android:textColor="#1addca"
                        android:text="@string/video_choose_text"/>
                <RadioGroup
                        android:id="@+id/choose_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingStart="65dp"
                        android:paddingEnd="0dp"
                        android:checkedButton="@id/in_app_video">
                    <!-- RadioButton -->
                    <RadioButton
                            android:id="@+id/album_video"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:text="@string/local_video"
                            android:textSize="16sp"/>
                    <!-- RadioButton -->
                    <RadioButton
                            android:id="@+id/in_app_video"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/in_app_video"
                            android:textSize="16sp"/>
                </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/choose_album_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingStart="70dp"
                android:paddingEnd="0dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:gravity="center_vertical"
                android:backgroundTint="@color/white"
                android:background="@null"
                android:textSize="16sp"
                android:textColor="@color/text_color"
                android:text="@string/video_choose"/>

            <Spinner
                android:id="@+id/choose_build_in_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="14sp"
                android:paddingStart="62dp"
                android:paddingEnd="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:entries="@array/video_names"
                android:spinnerMode="dialog"
                android:text="@string/video_choose"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#e0e0e0"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:layout_gravity="start"
                android:gravity="center_vertical"
                android:layout_marginTop="15dp"
                android:layout_marginStart="70dp"
                android:textSize="14sp"
                android:textColor="#1addca"
                android:text="@string/config_header"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textSize="16sp"
                    android:textColor="@color/text_color"
                    android:paddingStart="70dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/video_algorithm"/>
                <Spinner
                    android:id="@+id/video_algorithm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textSize="14sp"
                    android:paddingStart="62dp"
                    android:paddingEnd="10dp"
                    android:entries="@array/video_algorithm"
                    android:spinnerMode="dialog"
                    android:text="@string/video_choose"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textSize="16sp"
                    android:textColor="@color/text_color"
                    android:paddingStart="70dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/compare_algorithm"/>
                <Spinner
                    android:id="@+id/compare_algorithm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textSize="14sp"
                    android:paddingStart="62dp"
                    android:paddingEnd="10dp"
                    android:entries="@array/compare_algorithm"
                    android:spinnerMode="dialog"
                    android:text="@string/compare_algorithm"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textSize="16sp"
                    android:textColor="@color/text_color"
                    android:paddingStart="70dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/sr_ratio"/>
                <Spinner
                    android:id="@+id/sr_ratio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textSize="14sp"
                    android:paddingStart="62dp"
                    android:paddingEnd="10dp"
                    android:entries="@array/sr_ratio"
                    android:spinnerMode="dialog"
                    android:text="@string/sr_ratio"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#e0e0e0"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:layout_gravity="start"
                android:gravity="center_vertical"
                android:layout_marginTop="15dp"
                android:layout_marginStart="70dp"
                android:textSize="14sp"
                android:textColor="#1addca"
                android:text="@string/export_config"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textSize="16sp"
                    android:textColor="@color/text_color"
                    android:paddingStart="70dp"
                    android:paddingEnd="0dp"
                    android:paddingBottom="5dp"
                    android:text="@string/codec_type"/>
                <Spinner
                    android:id="@+id/export_codec_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textSize="14sp"
                    android:paddingStart="62dp"
                    android:paddingEnd="10dp"
                    android:entries="@array/codecs"
                    android:spinnerMode="dialog"
                    android:text="@string/codec_type"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textSize="16sp"
                    android:textColor="@color/text_color"
                    android:paddingStart="70dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="5dp"
                    android:text="@string/bitrate_mbps"/>

                <EditText
                    android:id="@+id/export_bitrate_mbps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textSize="16sp"
                    android:paddingStart="70dp"
                    android:paddingEnd="10dp"
                    android:background="@null"
                    android:text="10"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#e0e0e0"/>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/start_play_button_tsr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:text="@string/start_play_tsr"/>

        <Button
            android:id="@+id/start_export_button_tsr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:text="@string/start_export_tsr"/>
    </LinearLayout>

</LinearLayout>